# gif-maker

./: .gitignore  README.md  pyproject.toml  requirements.txt  video_to_gif.py
